fix: configure PostgreSQL connection and test database setup; fix Item.available mapping and exception message